# forecast-in-a-box

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-uv  LICENSE  README.md  README.md.old  compute.sh  docker-compose.yml  fiab.sh  justfile  pyproject.toml  requirements-aifs-linux.txt  requirements-dev.txt  requirements.txt
.github/workflows/: build-frontend.yml
backend/: Dockerfile  fiab.sh  install.sh  pyproject.toml
backend/forecastbox/: __init__.py  db.py  entrypoint.py  settings.py
backend/forecastbox/api/: __init__.py  types.py
backend/forecastbox/api/routers/: __init__.py  admin.py  auth.py  gateway.py  graph.py  job.py  model.py  product.py
backend/forecastbox/auth/: users.py
backend/forecastbox/models/: __init__.py  model.py
backend/forecastbox/products/: __init__.py  definitions.py  forecast.py  generic.py  pproc.py  product.py  registry.py  simple.py  thermal.py
backend/forecastbox/products/ensemble/: __init__.py  base.py  ens_stats.py  quantiles.py  threshold.py
backend/forecastbox/products/ensemble/definitions/: quantiles.yaml  threshold_probability.yaml
backend/forecastbox/products/extreme/: extreme.py
backend/forecastbox/products/schema/: default.yaml
backend/forecastbox/schemas/: user.py
backend/forecastbox/standalone/: __init__.py  entrypoint.py
frontend/: Dockerfile  README.md  index.html  package.json  theme.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/NebulaSans/: NebulaSans.css
frontend/public/dag/: example.html
frontend/src/: App.tsx  Router.tsx  SettingsContext.tsx  api.ts  declarations.d.ts  global.css  main.tsx  page.module.css
frontend/src/components/: Banner.tsx  building_on.tsx  coastlines-low.json  confirm.tsx  dag.tsx  environment.tsx  footer.tsx  graphVisualiser.module.css  graph_visualiser.tsx  interface.tsx  intro.module.css  intro.tsx  intro_globe.tsx  reduced-gg-points.json
frontend/src/components/animations/: loader.module.css  loader.tsx
frontend/src/components/model/: globe.module.css  globe.tsx  information.tsx  model.tsx  options.module.css  options.tsx
frontend/src/components/products/: cart.tsx  categories.module.css  categories.tsx  configuration.module.css  configuration.tsx  options.module.css  products.tsx
frontend/src/components/shared/: graphModal.tsx
frontend/src/layouts/: AdminPage.tsx  LoggedIn.tsx  MainLayout.tsx  Navbar.module.css
frontend/src/pages/: LandingPage.tsx  Login.tsx  Products.tsx  SignUp.tsx  Status.tsx
frontend/src/pages/admin/: gateway.tsx  settings.tsx
frontend/src/pages/jobs/: progress.tsx  status.module.css  status.tsx
frontend/src/pages/result/: result.tsx
src/forecastbox/: db.py  utils.py
src/forecastbox/api/: __init__.py  adapter.py  common.py  type_system.py  validation.py
src/forecastbox/controller/: __init__.py  comm.py  db.py  scheduler.py  server.py
src/forecastbox/executor/: __init__.py  ctrlmngr.py  entrypoint.py  executor.py  futures.py  procwatch.py  shmdb.py
src/forecastbox/frontend/: __init__.py  server.py
src/forecastbox/frontend/cascade/: __init__.py  catalog.py  contract.py  hello_cascade.py  hello_mars.py
src/forecastbox/frontend/static/: __init__.py  aifs.html  caco_result.html  index.html  job.html  prepare.html
src/forecastbox/jobs/: __init__.py  hello_aifs.py  hello_earth.py  hello_image.py  hello_tasks.py  hello_torch.py  hello_world.py  lookup.py  temperature_nbeats.py
src/forecastbox/plugins/: examples.py  lookup.py
src/forecastbox/scheduler/: __init__.py
src/forecastbox/standalone/: __init__.py  entrypoint.py  warmup.py
src/forecastbox/web_ui/: server.py
src/forecastbox/web_ui/static/: index.html  job.html
src/forecastbox/worker/: __init__.py  db.py  entrypoint.py  environment_manager.py  job_manager.py  reporting.py  serde.py  server.py
tests/: test_cascade_adapter.py  test_controller_server.py  test_db.py  test_dummy.py  test_executor.py  test_frontend_server.py  test_jobs.py  test_serde.py  test_validation.py  test_webui_server.py  test_worker_server.py
