[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast-in-a-box"
version = "0.0.1"
description = "Weather Forecast in a Box"
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]
license = { text = "Apache License Version 2.0" }

[project.urls]
"Source code" = "https://github.com/ecmwf/forecast-in-a-box"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"