[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forecast-in-a-box"
version = "0.0.1"
description = "Weather Forecast in a Box"
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]
license = { text = "Apache License Version 2.0" }
requires-python=">=3.10,<3.12"
# just a minimal set of dependencies to run the servers. Individual tasks install their runtime dependencies on their own
dependencies = [
	"fastapi",
	"httpx",
	"jinja2",
	"orjson",
	"python-multipart",
	"uvicorn",
	"cloudpickle",
	"pyrsistent",
]

[project.urls]
"Source code" = "https://github.com/ecmwf/forecast-in-a-box"

[tool.hatch.build.targets.wheel]
packages = ["src/forecastbox"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
ignore = ["E731"]

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
plugins = "pydantic.mypy"
